<resources>
    <string name="app_name">smart piano</string>
    <string name="loading_video_button_content">立即体验</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="favorite">收藏</string>
    <string name="player_title">视频教程</string>
    <string name="player_content">手把手教程，入门基础，热门歌曲都能轻松学会</string>
    <string name="lesson_title">跟灯练习</string>
    <string name="lesson_content">海量曲库，互动跟弹，零基础也能5分钟轻松上手</string>
    <string name="kara_title">卡拉游戏</string>
    <string name="kara_content">玩游戏也可以练钢琴，还可以亲子互动</string>
    
    <string name="video_base_lesson">基础教程</string>
    <string name="video_advance_lesson">进阶教程</string>
    <string name="press_again_exit_app">再按一次返回退出</string>
    <string name="load_more_text">正在加载...</string>
    <string name="no_content">没有更多内容</string>

    <string name="mine_login">登录后收藏琴谱，手机平板多端同步</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_histroy">历史记录</string>
    <string name="mine_record">我的录音</string>
    <string name="mine_tools">学习工具</string>
    <string name="mine_check">音色设置</string>
    <string name="mine_about">关于The ONE</string>
    <string name="mine_feedback">反馈</string>
    <string name="edit_text_search">输入您要找的曲谱/视频/卡拉游戏</string>
    <string name="database_name">database_log</string>
    <string name="load_fail">暂时没有网络连接</string>


</resources>
