<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="12dp"
                android:src="@drawable/head_default"
                />

            <TextView
                style="@style/mine_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/mine_login"/>
        </LinearLayout>

        <LinearLayout
            style="@style/mine_linear_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_favorite"
                    />

                <TextView
                    style="@style/mine_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_collection"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="60dp"
                android:background="@color/theme_bg_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_history"
                    />

                <TextView
                    style="@style/mine_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_histroy"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="60dp"
                android:background="@color/theme_bg_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_record_normal"
                    />

                <TextView
                    style="@style/mine_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_record"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/mine_linear_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_study_tools"
                    />

                <TextView
                    style="@style/mine_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_tools"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="60dp"
                android:background="@color/theme_bg_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_music_setting"
                    />

                <TextView
                    style="@style/mine_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_check"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/mine_linear_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_about"
                    />

                <TextView
                    style="@style/mine_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_about"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="60dp"
                android:background="@color/theme_bg_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_feedback"
                    />

                <TextView
                    style="@style/mine_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_feedback"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>